mixspace/static/music/css/styles.css
body {
    background-color: ghostwhite;
    font-family: Tahoma;
}

.navbar {
    background-color: ghostwhite;
}

.nav-link:hover {
    cursor: pointer;
}

.btn-search {
    margin-left: 0.5em;
}

.h1-pos {
    margin-top: 2.5em;
    text-align: center;
    font-size: 2em;
    margin-bottom: -0.1em;
}

.track-title {
    font-size: 1.3em;
}

.track-title, .track-artist, .track-artist-player {
    color: black;
    text-decoration: none;
}

.card {
    height: 13em;
    width: 17em;
    margin-bottom: 1em;
    display: flex;
    flex-direction: column;
    background-color: rgb(210, 218, 255);
    justify-content: space-between;
    padding: 1em;
    border-radius: 3px;
    transition: all 200ms ease-in-out 0s;
    margin-right: 0.5em;
    margin-left: 0.5em;
}

.card-bottom {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.track-artist {
    font-size: 0.5em;
    font-weight: bold;
}

.track-genre {
    font-size: 0.8em;
    font-weight: bold;
    color: grey;
}

.track-datetime {
    font-size: 0.8em;
    margin-top: -1em;
    margin-bottom: 0.6em;
    color: grey;
}

.card:hover {
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
    cursor: pointer;
}

.pagination-parent {
    margin-top: -1em;
}

.field-width {
    width: 17em;
}

.password-form-text {
    margin: -0.8em 2.3em -0em 0em;
    display: none;
}

.username-form-text {
    margin: -0.8em 1.5em 0em 0em;
    display: none;
}

.title-form-text {
    margin-top: -0.8em;
    margin-right: 2.2em;
    display: none;
}

.file-form-text {
    margin-top: 0.3em;
    margin-right: 2.8em;
    margin-bottom: -1.5em;
    display: none;
}

.submit {
    margin-right: 11.9em;
    padding: 0.7em;
    background-color: #fff;
    color: #0d6efd;
    border: 1px solid #ced4da;
}

.log-in-btn {
    margin-right: 12.6em;
}

.sign-up-redirect {
    text-align: center;
}

#home-to-register-btn, #login-to-redirect-btn {
    color: black;
}

#home-to-register-btn:hover, #login-to-redirect-btn:hover {
    color: #0d6efd;
}

.sign-up-redirect span{
    text-decoration: underline;
}

.sign-up-redirect span:hover {
    color: #0d6efd;
    cursor: pointer;
}

#upload-info {
    margin-top: 1em;
    margin-bottom: -1em;
    text-align: center;
    font-weight: bold;
}

.upload-btn {
    margin-right: 12.3em;
    margin-top: 1em;
}

.u-genre-input {
    margin-bottom: 1em;
}

footer p {
    text-align: center;
    font-weight: bold;
    font-size: 1em;
}

.github-redirect {
    color: black;
}

.github-redirect:hover {
    color: #0d6efd;
}

#home-page {
    display: block;
}

#log-in, #sign-up, #upload, #user-page {
    display: none;
}

.default-avatar {
    width: 100px;
    height: 100px;
    background-color: grey;
    font-weight: bold;
}

#followForm{
    margin-left: 4em;
    width: 6em;
}

#fakeFollowForm {
    margin-left: 4em;
    width: 6em;
    height: 2em;
}

.user-box {
    margin-top: -1.5em;
}

.username-h1 {
    margin-bottom: 0.3em;
}

.followButton {
    background-color: #fff;
    color: #0d6efd;
    border: 1px solid #ced4da;
}

.followButton:hover {
    background-color: #0d6efd;
    color: #fff;
}

.unfollowButton {
    background-color: #fff;
    color: #dc3545;
    border: 1px solid #ced4da;
}

.unfollowButton:hover {
    background-color: #dc3545;
    color: #fff;
}

#likeForm {
    /* position: absolute;
    bottom: 2em; */
    margin-bottom: -0.3em;
    width: 2em;
    height: 1.7em;
}

#likesCount {
    margin-left: 0.2em;
    user-select: none;
    font-size: 1.2em;
}

#likesCount-player {
    user-select: none;
}

.music-player {
    height: 30em;
    width: 20em;
    margin-bottom: 1em;
    display: flex;
    flex-direction: column;
    background-color: rgb(210, 218, 255);
    padding: 1em;
    justify-content: space-between;
    align-items: center;
    border-radius: 3px;
    margin-right: 0.5em;
    margin-left: 0.5em;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}

audio {
    align-self: center;
    margin-bottom: 1em;
}

.track-title-player {
    font-size: 1.3em;
    text-align: center;
    margin-top: 1em;
    font-weight: bold;
}

.track-artist-player {
    font-size: 1em;
    text-align: center;
    font-weight: bold;
    margin-top: 1em;
}

#likeButton, #unlikeButton {
    transition: all 200ms ease-in-out 0s;
}

#likeButton:hover {
    cursor: pointer;
    color: #dc3545;
}

#unlikeButton {
    color: #dc3545;
}

#unlikeButton:hover {
    color: black;
}

.player-icons {
    display: flex;
    justify-content: center;
    margin-top: 3em;
}

#likeForm-player {
    align-self: flex-start;
    margin-left: 1em;
}

#likesCount-player {
    margin-left: 0.2em;
    font-size: 1.8em;
}

.genre-date {
    user-select: none;
}

.empty-search {
    text-align: center;
    margin-top: 1em;
    font-size: 1.5em;
}

